[package]
name = "respwn"
version = "0.0.9"
authors = ["SynthouS <synthous@yandex.ru>"]
edition = "2021"
description = "Community continuation of SPWN Language"
readme = "README.md"
homepage = "https://github.com/synthous/respwn/"
repository = "https://github.com/synthous/respwn/"
license-file = "LICENSE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "respwn"
path = "src/main.rs"

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }

[dependencies]

termcolor = "1.1.2"
clap = "3.0.5"

internment = "0.5.4"
ariadne = "0.1.3" # errors


parser = { path = "../parser" }
shared = { path = "../shared" }
errors = { path = "../errors" }
editorlive = { path = "../editorlive" }
compiler = { path = "../compiler" }
optimizer = { path = "../optimizer" }
docgen = { path = "../docgen" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
harness = false
name = "time"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
levelstring = { path = "../levelstring" }
pckp = { path = "../pckp" }

# heat dir libraries -o wix/libraries.wxs -scom -frag -srd -sreg -gg -cg libraries -dr LIB_DIR -suid
